2007-11-06  Michael Goffioul <michael.goffioul@gmail.com>

	* toplev.cc (Fsystem) [__WIN32__ && ! __CYGWIN__]:
	Quote the complete command.

2007-11-06  John W. Eaton  <jwe@octave.org>

	* data.cc (Fnorm): New tests.

	* defun-int.h (DEFINE_FUNX_INSTALLER_FUN3): Don't install function
	if check_version produces an error.

2007-11-05  John W. Eaton  <jwe@octave.org>

	* pt-idx.cc (tree_index_expression::lvalue): Try to do a better
	job of computing the number of elements in lvalue expressions when
	the last indexing element is ".".

2007-11-02  John W. Eaton  <jwe@octave.org>

	* file-io.cc (fopen_mode_to_ios_mode): Use std::ios::app instead
	of std::ios::ate.

2007-11-02  Olli Saarela  <Olli.Saarela@kcl.fi>

	* input.cc, pr-output.cc, bitfcns.cc, DLD-FUNCTIONS/time.cc:
        Fix broken @examples in help texts.

2007-10-31  John W. Eaton  <jwe@octave.org>

	* data.cc (Fnorm): Avoid warning about p_val possibly being used
	uninitialized.

	* version.h (OCTAVE_VERSION): Now 2.9.16+.

2007-10-31  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.16.
	(OCTAVE_API_VERSION): Now api-v28.
	(OCTAVE_RELEASE_DATE): Now 2007-10-31.

2007-10-31  Muthiah Annamalai  <muthuspost@gmail.com>

	* pt-assign.h (tree_simple_assignment::op_type,
	tree_multi_assignment::op_type): New functions.
	* pt-unop.h (tree_unary_expression::op_type): New function.

2007-10-31  John W. Eaton  <jwe@octave.org>

	* graphics.cc (line::properties::get): Fix property name
	(markerface -> markerfacecolor).

	* Makefile.in (INCLUDES): Add debug.h to the list.

2007-10-30  John Swensen  <jpswensen@comcast.net>

	* debug.h: New file.
	* debug.cc (parse_dbfunction_params, do_find_bkpt_list,
	intmap_to_ov): New functions.
	(Fdbstop, Fdbclear): Use parse_dbfunction_params.
	Improve compatibility.
	(Fdbstatus): Improve compatibility.

	* help.cc (do_which): No longer static.
	* help.h: Provide decl.

2007-10-30  David Bateman  <dbateman@free.fr>
