@@ -1,3 +1,9 @@
+2007-11-06  David Bateman  <dbateman@free.fr>
+
+	* OPERATORS/op-bm-bm.cc (matrix_to_bool_matrix,
+	scalar_to_bool_matrix): New type conversion functions.
+	(install_bm_bm_ops): Install new type conversions functions.
+
 2007-11-06  Michael Goffioul <michael.goffioul@gmail.com>
 
 	* toplev.cc (Fsystem) [__WIN32__ && ! __CYGWIN__]:
